<resources>
    <string name="app_name">appproject</string>
    <string name="alreadyaccount">Already have an account?</string>
    <string name="login">Login</string>
    <string name="cemetery">cemetery</string>
    <string name="text">Username/Email</string>
    <string name="password">Password</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="dontaccount">Dont have an account?</string>

    <string name="donate">Donate</string>
    <string name="txt2">By creating an account you agree to our Terms of Services and Privacy Policy</string>
    <string name="payment">Payment</string>
    <string name="cardtype">Card Type</string>
    <string name="creditcard">Credit Card</string>
    <string name="jazzcash">JazzCash</string>
    <string name="cardnumber">card number</string>
    <string name="expiredate">expire date</string>
    <string name="cvv">cvv</string>
    <string name="otp">OTP</string>
    <string name="cardholdername">cardholdername</string>
    <string name="johndoe">John Doe</string>
    <string name="savecard">save card</string>
    <string name="totalprice">Total Price:</string>
    <string name="paysecure">pay secure</string>
    <string name="otpemail">You will get OTP on your email</string>
    <string name="dontrecieve">Dont recieve any email?</string>
    <string name="verify">Verify</string>
    <string name="resend">Resend</string>
    <string name="resetpass">Reset Password</string>
    <string name="onetimepass">We will send you One Time Password on your email</string>
    <string name="verification">OTP Verification</string>
    <string name="email">Email</string>
    <string name="Services">Services</string>
    <string name="Reservation">Reservation</string>
    <string name="Create">Create</string>
    <string name="donation">Donation</string>
    <string name="next">Next</string>
    <string name="amount">Amount To Donate</string>
    <string name="thank">Thank you for support our community</string>
    <string name="otptext">If invalid email then click</string>

    <string name="Username">User Name</string>
    <string name="fullname">Full Name</string>
    <string name="contact">03000000000</string>
    <string name="save">Save</string>
    <string name="personname">Person Name</string>
    <string name="jhonesmith">Jhone Smith</string>
    <string name="time">Time</string>\
    <string name="relation">Relation</string>
    <string name="cotton">Cotton Rs:</string>
    <string name="shroud">Shroud Rs:</string>
    <string name="religion">Religionist Rs:</string>
    <string name="flower">Flower Rs:</string>
    <string name="labour">Labour Rs:</string>
    <string name="burialdate">Burial Date</string>
    <string name="newreservation">New Reservation</string>
    <string name="passwprd">Password</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="setnewpass">Set New Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="address">Street # M342,New York</string>
    <string name="policy">By Creating an account you agree to our Terms of services and private Policy.</string>
    <string name="signup">Sign Up</string>
    <string name="already">Already have a account?</string>
    <string name="plot">Plots</string>
    <string name="mpin">MPIN</string>
    <string name="proceed">Proceed</string>
    <string name="cancel">Cancel</string>

    <string name="jazz">JazzCash Payment</string>
    <string name="number">Mobile No</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="username">Username</string>
    <string name="contactnum">Contact#</string>

    <string-array name="relation_list">
        <item>Select</item>
        <item>Father</item>
        <item>Mother</item>
        <item>Brother</item>
        <item>Sister</item>
        <item>Neighbourer</item>
        <item>Other</item>
    </string-array>

</resources>