<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/orange1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_baseline_menu_24"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="@string/jazz"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/paymentCardTypeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cardtype"
            android:textColor="@color/orange1"
            android:textSize="22sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/jazzcashRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:paddingLeft="50dp">

            <RadioButton
                android:id="@+id/jazzcashPaymentCreditCardRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creditcard"
                android:textColor="@color/orange2" />

            <RadioButton
                android:id="@+id/jazzcashpaymentJazzCashRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/jazzcash"
                android:textColor="@color/orange2" />
        </RadioGroup>

        <EditText
            android:id="@+id/jazzcashpaymentMobileNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/orange1"
            android:drawableLeft="@drawable/ic_baseline_person_outline_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/number"
            android:inputType="number"
            android:textColor="@color/orange1"
            android:textColorHint="@color/orange3" />

        <EditText
            android:id="@+id/jazzcashpaymentMPINEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="200dp"
            android:backgroundTint="@color/orange1"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/mpin"
            android:inputType="textPassword"
            android:textColorHint="@color/orange3" />

        <TextView
            android:id="@+id/jazzcashTotalPriceTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/totalprice"
            android:textColor="@color/orange3"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/jazzcashpaymentProceedButton"
                android:layout_width="69dp"
                android:layout_height="80dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:backgroundTint="@color/orange1"
                android:gravity="center"
                android:text="@string/proceed" />

            <Button
                android:id="@+id/jazzcashpaymentCancelButton"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:backgroundTint="@color/orange1"
                android:text="@string/cancel" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>