<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/orange1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/donationbackarrowButton"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_weight="1"
            android:text="@string/donation"
            android:textStyle="bold"
            android:backgroundTint="@color/orange1"
            android:drawableLeft="@drawable/ic_baseline_arrow_back_24" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/hand" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/thank"
            android:textAllCaps="false"
            android:textColor="@color/orange2"
            android:textSize="16sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="80dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/donationFullNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/orange1"
                android:drawableLeft="@drawable/ic_baseline_person_outline_24"
                android:drawablePadding="20dp"
                android:ems="10"
                android:hint="@string/fullname"
                android:inputType="text|textPassword"
                android:textAllCaps="true"
                android:textColorHint="@color/orange3" />

            <EditText
                android:id="@+id/donationAmountEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange1"
                android:drawableLeft="@drawable/ic_baseline_payment_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/otp"
                android:inputType="text"
                android:text="@string/amount"
                android:textAllCaps="true"
                android:textColor="@color/orange3"
                android:textColorHint="@color/orange3" />
        </LinearLayout>

        <Button
            android:id="@+id/donationNextButton"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="100dp"
            android:backgroundTint="@color/orange1"
            android:gravity="center"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:linksClickable="true"
                android:text="@string/dontrecieve"
                android:textColor="@color/orange4"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:linksClickable="true"
                android:paddingLeft="5dp"
                android:text="@string/resend"
                android:textColor="@color/blue1"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>